<resources>
    <string name="app_name">Different API Operations</string>
    <string name="enter_number">Enter Number&#8230;</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView2</string>
    <string name="textview3">TextView3</string>
    <string name="textview4">TextView4</string>
    <string name="enter_the_userid">Enter the userId&#8230;</string>
    <string name="get">GET</string>
    <string name="next_page">Next Page</string>
</resources>