<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardBackgroundColor="#007A78"
        app:cardCornerRadius="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/userId_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/textview"
                android:textAlignment="center"
                android:textColor="#FFC745"
                tools:ignore="TextContrastCheck"
                />

            <TextView
                android:id="@+id/id_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/textview2"
                android:textAlignment="center"
                android:textColor="#FFC745"
                tools:ignore="TextContrastCheck"
                />

            <TextView
                android:id="@+id/title_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/textview3"
                android:textAlignment="center"
                android:textColor="#FFC745"
                tools:ignore="TextContrastCheck"
                />

            <TextView
                android:id="@+id/body_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/textview4"
                android:textAlignment="center"
                android:textColor="#FFC745"
                tools:ignore="TextContrastCheck"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>