<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="myVM"
            type="com.example.differentapioperations.viewmodel.MainViewModel"
            />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        >


        <EditText
            android:id="@+id/userId_txt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="@string/enter_the_userid"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textAlignment="center"
            android:textColorHint="#757575"
            />

        <Button
            android:id="@+id/GET_Button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/userId_txt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:enabled="true"
            android:text="@string/get"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/GET_Button2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/userId_txt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:enabled="false"
            android:text="@string/get"
            android:visibility="visible"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonNext"
            android:layout_below="@+id/GET_Button"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/next_page"
            />
    </RelativeLayout>
</layout>